# rust-gba

./: todo.org
gba-bios/: Cargo.toml
gba-bios/src/: arith.rs  lib.rs  mem.rs  reset.rs  wait.rs
gba-hw/: Cargo.toml
gba-hw/src/: interrupts.rs  lib.rs  registers.rs  video.rs
gba-register-generator/: Cargo.toml
gba-register-generator/src/: generate.rs  lib.rs  main.rs  register.rs
gba-rt/: Cargo.toml  build.rs
gba-rt/src/: init.s  lib.rs
gba_hw/: Cargo.toml
gba_hw/src/: interrupts.rs  lib.rs  video.rs
gba_register_generator/: Cargo.toml
gba_register_generator/src/: generate.rs
gbatest/: .gitignore  Cargo.toml  Xargo.toml  build.sh  gameboy-advance.json
gbatest/src/: lazy_static.rs  main.rs
