[package]
authors = ["Russell McClellan <russell.mcclellan@gmail.com>"]
name = "gba-hw"
version = "0.1.0"
build = "build/build.rs"

[dependencies]
bitflags = "0.8.2"
vcell = "0.1.0"

[build-dependencies.gba-register-generator]
path = "../gba-register-generator"

[build-dependencies]
quote = "0.3.15"
syn = "0.11.10"
