[package]
authors = ["Russell McClellan <russell.mcclellan@gmail.com>"]
build = "build.rs"
name = "gba_rt"
version = "0.1.0"

[dependencies]
linked_list_allocator = "^0.2.5"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[dependencies.gba_bios]
path = "../gba-bios"

[dependencies.gba_hw]
path = "../gba_hw"
